--- a/src/Footer/style.scss
+++ b/src/Footer/style.scss
@@ -6,6 +6,8 @@
     color: #fff;
     text-shadow: 0 0 2px grey;
     text-align: center;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
 
     &-result{
         padding: .5em 0 0;
