--- a/src/Header/style.scss
+++ b/src/Header/style.scss
@@ -9,6 +9,8 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
 
     &-title{
         font-size: 2em;
