--- a/src/components/Header/style.scss
+++ b/src/components/Header/style.scss
@@ -16,8 +16,28 @@
         font-size: 2em;
     }
 
+    &-wrapper{
+        display: flex;
+        justify-content: center;
+    }
+
     &-subtitle{
         font-size: 1.6em;
         font-weight: lighter;
+    }
+
+    &-amount{
+        width: 70px;
+        font-size: 1.1em;
+        font-weight: lighter;
+        // background-color: rgba(255, 255, 255, 0.427);
+        background-color: transparent;
+        border: none;
+        color: #fff;
+        text-align: center;
+    }
+
+    &-amount:focus{
+        // outline: red;
     }
 }
