--- a/src/components/Footer/style.scss
+++ b/src/components/Footer/style.scss
@@ -1,22 +1,22 @@
 .footer{
     width: 70%;
     height: 20%;
-    margin: auto;
+    margin: 0 auto;
     background-color: rgb(0, 162, 191);
     color: #fff;
+    border: 1px solid #fff;
     text-shadow: 0 0 2px grey;
     text-align: center;
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
 
     &-result{
-        padding: .5em 0 0;
+        padding: 1em 0 0;
         font-size: 2em;
         font-weight: bold;
     }
 
     &-currency{
-        padding: .5em 0 0;
         font-size: 1.8em;
         font-weight: lighter;
     }
