--- a/src/components/Header/style.scss
+++ b/src/components/Header/style.scss
@@ -1,9 +1,11 @@
 .header{
     width: 70%;
     height: 20%;
-    margin: auto;
+    margin: 0 auto;
     background-color: rgb(0, 162, 191);
     color: #fff;
+    border: 1px solid #fff;
+    border-bottom: none;
     text-shadow: 0 0 2px grey;
     text-align: center;
     display: flex;
@@ -12,6 +14,7 @@
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
 
+
     &-title{
         font-size: 2em;
     }
@@ -19,6 +22,7 @@
     &-wrapper{
         display: flex;
         justify-content: center;
+        align-items: center;
     }
 
     &-subtitle{
@@ -27,17 +31,14 @@
     }
 
     &-amount{
-        width: 70px;
-        font-size: 1.1em;
+        max-width: 2.5em;
+        border: 0;
+        font: inherit;
+        font-size: 1.6em;
         font-weight: lighter;
-        // background-color: rgba(255, 255, 255, 0.427);
         background-color: transparent;
         border: none;
         color: #fff;
-        text-align: center;
-    }
-
-    &-amount:focus{
-        // outline: red;
+        text-align: right;
     }
 }
